# tooter

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  opencode.jsonc  pyproject.toml
.opencode/agents/: math-pedagogy.md
.opencode/commands/: chapter-plan.md
.opencode/instructions/: math-study-context.md
.opencode/skills/math-programming-exercises/: SKILL.md
.pi/: APPEND_SYSTEM.md
.pi/prompts/: assess-solution.md  chapter-plan.md  exit-check.md  hint.md  transfer-problem.md
.pi/skills/aata-code-exercises/: SKILL.md
.pi/skills/aata-solution-assessment/: SKILL.md
.pi/skills/aata-study-planning/: SKILL.md
.pi/skills/aata-tutoring/: SKILL.md
.pi/skills/math-programming-exercises/: SKILL.md
code/: README.md
code/python/checks/: test_ch02_integers.py
code/python/exercises/: __init__.py  ch02.py  ch03_groups.py
code/python/tests/: test_ch02.py  test_ch03_groups.py  test_integers.py
code/rust/aata_judson/: Cargo.toml
docs/: aata-2021-to-current.md  agent-harnesses.md  pedagogy-for-tutoring.md  pitt-exercise-verification.md  resource-map.md  workflow.md
notes/: README.md
references/: README.md
references/aata/: README.md
references/aata/diffs/: 2021-to-2025-changed-files.txt  2021-to-2025-commits.txt  2021-to-2025-source.diff  2021-to-2025-stat.txt
references/courses/: README.md
sage/: README.md
sage/ch02-integers/: euclidean_algorithm.sage
scripts/: fetch_references.py  update_aata_diff.sh
studies/: active.md
studies/judson-aata/: profile.md  workflow.md
tracking/: code-exercises.md  pitt-math0430-index.md  progress.md
(+29 files in other folders)
